Complete Phase 1 AI Builder testing - comprehensive report with findings
- Built backend successfully (Java 17 compatibility fixes applied temporarily)
- Started backend service on port 8080
- Tested all Phase 1 features comprehensively
- Created detailed test report documenting what works and what doesn't
- Identified root causes and provided fix recommendations

Key Findings:
- Direct action API works perfectly (listApps with action parameter)
- Natural language classification NOT working (no AI provider configured)
- Heuristic patterns too strict (fail to match common phrases)
- Small talk detection not functioning
- App resolution logic has issues

All findings documented in AI_BUILDER_PHASE1_TEST_REPORT.md

Co-authored-by: dilip-upadhyay <15182489+dilip-upadhyay@users.noreply.github.com>